[metadata]
# replace with your username:
name = libav
version = 0.0.1
author = Kizukukoto
author_email = kizukukoto.devel@gmail.com
description = FFMPEG Python bindings
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kizukukoto/libav
project_urls =
    Bug Tracker = https://github.com/kizukukoto/libav/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6